--- a/src/webui/_locales/en/messages.json
+++ b/src/webui/_locales/en/messages.json
@@ -80,96 +80,96 @@
     "description": "Text explaining to the user what the 'Split Tunnel' setting does if enabled."
   },
   "settings#split-tunnel#enable-label": {
-    "message": "Don't proxy domestic websites",
+    "message": "Don't proxy websites within your country",
     "description": "The label on the checkbox that enables 'Split Tunnel'."
   },
   "settings#egress-region#heading": {
     "message": "Psiphon Server Region",
-    "description": ""
+    "description": "Settings section heading. In this section the user can choose to use a Psiphon server in a specific country/region (or the default, which is just to choose the best/fastest region). "
   },
   "settings#egress-region#select-best-performance": {
     "message": "Best Performance",
-    "description": ""
+    "description": "One of the choices in the 'Psiphon Server Region' combo box. This is the default option and indicates that Psiphon will use a server in the best/fastest region."
   },
   "settings#egress-region#select-us": {
     "message": "United States",
-    "description": ""
+    "description": "One of the choices in the 'Psiphon Server Region' combo box. If selected, a Psiphon server in the United States will be used."
   },
   "settings#egress-region#select-gb": {
     "message": "United Kingdom",
-    "description": ""
+    "description": "One of the choices in the 'Psiphon Server Region' combo box. If selected, a Psiphon server in the UK will be used."
   },
   "settings#egress-region#select-jp": {
     "message": "Japan",
-    "description": ""
+    "description": "One of the choices in the 'Psiphon Server Region' combo box. If selected, a Psiphon server in Japan will be used."
   },
   "settings#egress-region#select-sg": {
     "message": "Singapore",
-    "description": ""
+    "description": "One of the choices in the 'Psiphon Server Region' combo box. If selected, a Psiphon server in Singapore will be used."
   },
   "settings#egress-region#select-nl": {
     "message": "Netherlands",
-    "description": ""
+    "description": "One of the choices in the 'Psiphon Server Region' combo box. If selected, a Psiphon server in the Netherlands will be used."
   },
   "settings#egress-region#select-de": {
     "message": "Germany",
-    "description": ""
+    "description": "One of the choices in the 'Psiphon Server Region' combo box. If selected, a Psiphon server in Germany will be used."
   },
   "settings#egress-region#help-text": {
     "message": "Psiphon has servers in many different countries. For the fastest connection speed you should choose <strong>\"Best Performance\"</strong>, but you may instead prefer to use a server in a specific country.",
-    "description": ""
-  },
-  "settings#transport-mode#heading": {
-    "message": "Transport Mode",
-    "description": ""
-  },
-  "settings#transport-mode#check-label": {
-    "message": "Use VPN Mode",
-    "description": ""
-  },
-  "settings#transport-mode#help-text": {
-    "message": "Uses Windows IPSec/L2TP VPN. This mode will tunnel all your apps, but it doesn't provide obfuscation. It is <strong>not recommended</strong> unless VPN-like behavior is required.",
-    "description": ""
+    "description": "Help text below the 'Psiphon Server Region' combo box. It explains to the user what the setting does and what the default (and best) option is."
   },
   "settings#local-proxy-ports#heading": {
     "message": "Local Proxy Ports",
-    "description": ""
+    "description": "Settings section heading. In this section the user can specify what network ports the local Psiphon processes should use (Psiphon uses two such ports). For most people, this should be set to automatic."
   },
   "settings#local-proxy-ports#leave-blank": {
     "message": "Leave blank for automatic port selection (recommended).",
-    "description": ""
+    "description": "Help text that appears above the 'Local Proxy Ports' settings. It indicates what the default/best option is (blank, automatic)."
   },
   "settings#local-proxy-ports#http-label": {
     "message": "HTTP/HTTPS",
-    "description": ""
+    "description": "Label for the text box where the user will enter their desired local port for the Psiphon HTTP/HTTPS process. The full term for this would be 'Desired HTTP and HTTPS local proxy port', but is shortened."
   },
   "settings#port-value-error-msg": {
     "message": "Must be between 1 and 65535.",
-    "description": ""
+    "description": "Error text that appears when the user enters an invalid network port number. As indicated, a valid port number must be a number between 1 and 65535, inclusive. This text is not visible until an invalid value is entered."
   },
   "settings#local-proxy-ports#socks-label": {
     "message": "SOCKS",
-    "description": ""
+    "description": "Label for the text box where the user will enter their desired local port for the Psiphon SOCKS process. The full term for this would be 'Desired SOCKS local proxy port', but is shortened. 'SOCKS' is a proxy protocol. Any user for whom this setting is useful will know what that means."
   },
   "settings#upstream-proxy#heading": {
     "message": "Upstream Proxy",
-    "description": ""
+    "description": "Settings section heading. In this section the user can specify network information to use an 'upstream proxy', which is a separate proxy that Psiphon will connect through to get to its own server. This is most often used by people in school or work networks that force them to connect out to the Internet through a particular server. This setting can also disable automatic upstream proxy use."
   },
   "settings#upstream-proxy#by-default": {
     "message": "If your computer already has a proxy configured, by default Psiphon will use that proxy when establishing a tunnel. You can override that by specifying a proxy to use, or by specifying that no such \"upstream proxy\" should be used.<br> Only HTTP proxies that support HTTPS are allowed.",
-    "description": ""
+    "description": "Help text indicating the default (and best) configuration and behavior for the 'Upstream Proxy' setting. It also indicates what will happen if the setting is overridden or disabled."
   },
   "settings#upstream-proxy#hostname-label": {
     "message": "Hostname",
-    "description": ""
+    "description": "Label for the text box where the user can set the hostname for the 'upstream proxy'. 'Hostname' means approximately the same thing as 'server network name or identifier'."
   },
   "settings#upstream-proxy#port-label": {
     "message": "Port",
-    "description": ""
+    "description": "Label for the text box where the user can set the network port number for the 'upstream proxy' that they would like to use."
   },
   "settings#upstream-proxy#skip-label": {
     "message": "Don't use upstream proxy",
-    "description": ""
+    "description": "Label for the checkbox that allows the user to override the default 'upstream proxy' usage and totally disable the feature."
+  },
+  "settings#transport-mode#heading": {
+    "message": "Transport Mode",
+    "description": "Settings section heading. In this section the user can choose to use an alternative connection and data transfer method -- also known as 'transport'."
+  },
+  "settings#transport-mode#check-label": {
+    "message": "Use VPN Mode",
+    "description": "Label for the checkbox that allows the user to indicate that they want to use the non-default network transport mode. This mode is generally inferior for circumvention and not recommended."
+  },
+  "settings#transport-mode#help-text": {
+    "message": "Uses Windows IPSec/L2TP VPN. This mode will tunnel all your apps, but it doesn't provide obfuscation. It is <strong>not recommended</strong> unless VPN-like behavior is required.",
+    "description": "Help text for the 'Use VPN Mode' transport selection checkbox. It gives some technical details and indicates that this mode is not recommended."
   },
   "feedback#top_content_title": {
     "message": "Give Us Your Feedback",
