--- a/src/webui/_locales/ru/messages.json
+++ b/src/webui/_locales/ru/messages.json
@@ -5,11 +5,7 @@
     },
     "settings#egress-region#select-jp": {
         "message": "Япония",
-        "description": ""
-    },
-    "settings#vpn-mode#check-label": {
-        "message": "Use VPN Mode",
-        "description": ""
+        "description": "One of the choices in the 'Psiphon Server Region' combo box. If selected, a Psiphon server in Japan will be used."
     },
     "settings#error-alert": {
         "message": "<strong>Error!</strong> Please fix incorrect values before proceeding.",
@@ -41,7 +37,7 @@
     },
     "settings#split-tunnel#help-text": {
         "message": "If enabled, requests made to servers within your home country will not be tunneled through Psiphon.",
-        "description": ""
+        "description": "Text explaining to the user what the 'Split Tunnel' setting does if enabled."
     },
     "about#visit-download-site": {
         "message": "To <strong>download a new version</strong> of Psiphon, or to <strong>get help and more information</strong>, please <a href=\"#\" id=\"about-info-url\">visit the website</a>.",
@@ -49,23 +45,15 @@
     },
     "settings#upstream-proxy#skip-label": {
         "message": "Don't use upstream proxy",
-        "description": ""
-    },
-    "settings#vpn-mode#heading": {
-        "message": "VPN Mode",
-        "description": ""
+        "description": "Label for the checkbox that allows the user to override the default 'upstream proxy' usage and totally disable the feature."
     },
     "settings#upstream-proxy#port-label": {
         "message": "Порт",
-        "description": ""
+        "description": "Label for the text box where the user can set the network port number for the 'upstream proxy' that they would like to use."
     },
     "settings#port-value-error-msg": {
         "message": "Must be between 1 and 65535.",
-        "description": ""
-    },
-    "settings#vpn-mode#help-text": {
-        "message": "Uses Windows IPSec/L2TP VPN. This mode will tunnel all your apps, but it doesn't provide obfuscation. It is <strong>not recommended</strong> unless VPN-like behavior is required.",
-        "description": ""
+        "description": "Error text that appears when the user enters an invalid network port number. As indicated, a valid port number must be a number between 1 and 65535, inclusive. This text is not visible until an invalid value is entered."
     },
     "nav#feedback": {
         "message": "Отзыв",
@@ -77,7 +65,7 @@
     },
     "settings#egress-region#select-us": {
         "message": "США",
-        "description": ""
+        "description": "One of the choices in the 'Psiphon Server Region' combo box. If selected, a Psiphon server in the United States will be used."
     },
     "feedback#top_para_2": {
         "message": "Many problems can be fixed by downloading the latest version. You can <a class=\"NewVersionURL\" href=\"#\">download the latest version by clicking here</a>, or you can send an email to <a class=\"NewVersionEmail\" href=\"#\"></a>.",
@@ -89,7 +77,7 @@
     },
     "settings#local-proxy-ports#socks-label": {
         "message": "SOCKS",
-        "description": ""
+        "description": "Label for the text box where the user will enter their desired local port for the Psiphon SOCKS process. The full term for this would be 'Desired SOCKS local proxy port', but is shortened. 'SOCKS' is a proxy protocol. Any user for whom this setting is useful will know what that means."
     },
     "feedback#top_para_3": {
         "message": "You can also find solutions to many common problems in our <a class=\"FaqURL\" href=\"#\">Frequently Asked Questions</a>.",
@@ -99,17 +87,13 @@
         "message": "<strong>If the website is inaccessible</strong>, you can get a new version of Psiphon by sending an email to:",
         "description": "Paragraph on the 'About' page telling users that they can also get a new version of Psiphon via email. The text in this resource is then followed by an email address."
     },
-    "settings#egress-region#select-label": {
-        "message": "Select desired Psiphon server region:",
-        "description": ""
-    },
     "settings#egress-region#select-nl": {
         "message": "Нидерланды",
-        "description": ""
+        "description": "One of the choices in the 'Psiphon Server Region' combo box. If selected, a Psiphon server in the Netherlands will be used."
     },
     "settings#local-proxy-ports#http-label": {
         "message": "HTTP/HTTPS",
-        "description": ""
+        "description": "Label for the text box where the user will enter their desired local port for the Psiphon HTTP/HTTPS process. The full term for this would be 'Desired HTTP and HTTPS local proxy port', but is shortened."
     },
     "settings#reset-button": {
         "message": "Reset to Default",
@@ -121,23 +105,27 @@
     },
     "settings#upstream-proxy#heading": {
         "message": "Upstream Proxy",
-        "description": ""
+        "description": "Settings section heading. In this section the user can specify network information to use an 'upstream proxy', which is a separate proxy that Psiphon will connect through to get to its own server. This is most often used by people in school or work networks that force them to connect out to the Internet through a particular server. This setting can also disable automatic upstream proxy use."
     },
     "settings#egress-region#help-text": {
-        "message": "Psiphon has servers in many different countries. For the fastest connection speed you should choose \"Best Performance\", but you may instead prefer to use a server in a specific country.",
-        "description": ""
+        "message": "Psiphon has servers in many different countries. For the fastest connection speed you should choose <strong>\"Best Performance\"</strong>, but you may instead prefer to use a server in a specific country.",
+        "description": "Help text below the 'Psiphon Server Region' combo box. It explains to the user what the setting does and what the default (and best) option is."
     },
     "settings#vpn-incompatible-msg": {
         "message": "(Doesn't work with VPN mode.)",
-        "description": ""
+        "description": "If 'VPN mode' is enabled, this text is displayed under or beside settings which are incompatible with VPN mode and have been disabled because of it. It is intended to let the user know why the setting has been disabled."
+    },
+    "settings#vpn-incompatible-label": {
+        "message": "VPN",
+        "description": "If 'VPN mode' is enabled, this text shows up in a label beside the Settings sections which are incompatible with VPN mode. It is intended to draw the user's attention to the fact that some of the other settings have become disabled."
     },
     "settings#local-proxy-ports#heading": {
         "message": "Local Proxy Ports",
-        "description": ""
+        "description": "Settings section heading. In this section the user can specify what network ports the local Psiphon processes should use (Psiphon uses two such ports). For most people, this should be set to automatic."
     },
     "settings#egress-region#select-de": {
         "message": "Германия",
-        "description": ""
+        "description": "One of the choices in the 'Psiphon Server Region' combo box. If selected, a Psiphon server in Germany will be used."
     },
     "nav#connection": {
         "message": "Connection",
@@ -169,7 +157,7 @@
     },
     "settings#local-proxy-ports#leave-blank": {
         "message": "Leave blank for automatic port selection (recommended).",
-        "description": ""
+        "description": "Help text that appears above the 'Local Proxy Ports' settings. It indicates what the default/best option is (blank, automatic)."
     },
     "language#success-message": {
         "message": "<strong>Hello!</strong> Welcome to Psiphon.",
@@ -177,11 +165,15 @@
     },
     "settings#egress-region#select-sg": {
         "message": "Сингапур",
-        "description": ""
+        "description": "One of the choices in the 'Psiphon Server Region' combo box. If selected, a Psiphon server in Singapore will be used."
     },
     "feedback#diagnostic_check": {
         "message": "Upload diagnostic data. Please note that this diagnostic data does not identify you, and it will help us to keep Psiphon running smoothly. <a class=\"DataCollectionInfoURL\" href=\"#\">Click here to see what data we collect.</a>",
         "description": "Checkbox text. If it is checked, diagnostic information about Psiphon's status will be sent along with the feedback to Psiphon Inc."
+    },
+    "settings#transport-mode#heading": {
+        "message": "Transport Mode",
+        "description": "Settings section heading. In this section the user can choose to use an alternative connection and data transfer method -- also known as 'transport'."
     },
     "about#description": {
         "message": "Psiphon is a <strong>censorship circumvention tool</strong> — it is designed to give access to the open Internet, past censors and firewalls. It is <strong>open source</strong> and developed with love in Toronto, Canada.",
@@ -189,7 +181,11 @@
     },
     "settings#split-tunnel#heading": {
         "message": "Split Tunnel",
-        "description": ""
+        "description": "Settings section heading. If the user clicks this, the 'Split Tunnel' section will expand and can be edited. If 'split tunnel' is enabled, if the user is trying to get to a website in his/her own country, they will connect to it directly, instead of through Psiphon."
+    },
+    "settings#transport-mode#check-label": {
+        "message": "Use VPN Mode",
+        "description": "Label for the checkbox that allows the user to indicate that they want to use the non-default network transport mode. This mode is generally inferior for circumvention and not recommended."
     },
     "nav#messages": {
         "message": "Log Messages",
@@ -197,27 +193,27 @@
     },
     "settings#egress-region#select-gb": {
         "message": "Великобритания",
-        "description": ""
+        "description": "One of the choices in the 'Psiphon Server Region' combo box. If selected, a Psiphon server in the UK will be used."
     },
     "settings#upstream-proxy#hostname-label": {
         "message": "Hostname",
-        "description": ""
+        "description": "Label for the text box where the user can set the hostname for the 'upstream proxy'. 'Hostname' means approximately the same thing as 'server network name or identifier'."
     },
     "feedback#smiley_sad": {
         "message": "Psiphon часто не может соединиться, или его производительность не достаточна.",
         "description": "The text below the 'sad face' feedback choice."
     },
     "settings#egress-region#heading": {
-        "message": "Psiphon server region",
-        "description": ""
+        "message": "Psiphon Server Region",
+        "description": "Settings section heading. In this section the user can choose to use a Psiphon server in a specific country/region (or the default, which is just to choose the best/fastest region). "
     },
     "settings#upstream-proxy#by-default": {
         "message": "If your computer already has a proxy configured, by default Psiphon will use that proxy when establishing a tunnel. You can override that by specifying a proxy to use, or by specifying that no such \"upstream proxy\" should be used.<br> Only HTTP proxies that support HTTPS are allowed.",
-        "description": ""
+        "description": "Help text indicating the default (and best) configuration and behavior for the 'Upstream Proxy' setting. It also indicates what will happen if the setting is overridden or disabled."
     },
     "settings#split-tunnel#enable-label": {
-        "message": "Don't proxy domestic websites",
-        "description": ""
+        "message": "Don't proxy websites within your country",
+        "description": "The label on the checkbox that enables 'Split Tunnel'."
     },
     "about#visit-company-site": {
         "message": "To find out more about Psiphon Inc. please visit our <a href=\"https://psiphon.ca\">company website</a>.",
@@ -239,9 +235,13 @@
         "message": "Please wait...",
         "description": "Text on the big connection button telling the user to wait while Psiphon tries to disconnect from the network. When this message is shown, the button is disabled."
     },
+    "settings#transport-mode#help-text": {
+        "message": "Uses Windows IPSec/L2TP VPN. This mode will tunnel all your apps, but it doesn't provide obfuscation. It is <strong>not recommended</strong> unless VPN-like behavior is required.",
+        "description": "Help text for the 'Use VPN Mode' transport selection checkbox. It gives some technical details and indicates that this mode is not recommended."
+    },
     "settings#egress-region#select-best-performance": {
         "message": "Best Performance",
-        "description": ""
+        "description": "One of the choices in the 'Psiphon Server Region' combo box. This is the default option and indicates that Psiphon will use a server in the best/fastest region."
     },
     "connection#connect-btn": {
         "message": "Connect",
