--- a/src/webui/_locales/es/messages.json
+++ b/src/webui/_locales/es/messages.json
@@ -108,7 +108,7 @@
         "description": "Settings section heading. In this section the user can specify network information to use an 'upstream proxy', which is a separate proxy that Psiphon will connect through to get to its own server. This is most often used by people in school or work networks that force them to connect out to the Internet through a particular server. This setting can also disable automatic upstream proxy use."
     },
     "settings#egress-region#help-text": {
-        "message": "Psiphon has servers in many different countries. For the fastest connection speed you should choose <strong>\"Best Performance\"</strong>, but you may instead prefer to use a server in a specific country.",
+        "message": "Psiphon tiene servidores en muchos países distintos. Para obtener la conexión más rápida debe elegir \"El mejor rendimiento\", pero en lugar de esto puede preferir usar un servidor en un país específico.",
         "description": "Help text below the 'Psiphon Server Region' combo box. It explains to the user what the setting does and what the default (and best) option is."
     },
     "settings#vpn-incompatible-msg": {
@@ -172,7 +172,7 @@
         "description": "Checkbox text. If it is checked, diagnostic information about Psiphon's status will be sent along with the feedback to Psiphon Inc."
     },
     "settings#transport-mode#heading": {
-        "message": "Transport Mode",
+        "message": "Modo de transporte",
         "description": "Settings section heading. In this section the user can choose to use an alternative connection and data transfer method -- also known as 'transport'."
     },
     "about#description": {
@@ -184,7 +184,7 @@
         "description": "Settings section heading. If the user clicks this, the 'Split Tunnel' section will expand and can be edited. If 'split tunnel' is enabled, if the user is trying to get to a website in his/her own country, they will connect to it directly, instead of through Psiphon."
     },
     "settings#transport-mode#check-label": {
-        "message": "Use VPN Mode",
+        "message": "Usar modo VPN",
         "description": "Label for the checkbox that allows the user to indicate that they want to use the non-default network transport mode. This mode is generally inferior for circumvention and not recommended."
     },
     "nav#messages": {
@@ -204,7 +204,7 @@
         "description": "The text below the 'sad face' feedback choice."
     },
     "settings#egress-region#heading": {
-        "message": "Psiphon Server Region",
+        "message": "Región del servidor Psiphon",
         "description": "Settings section heading. In this section the user can choose to use a Psiphon server in a specific country/region (or the default, which is just to choose the best/fastest region). "
     },
     "settings#upstream-proxy#by-default": {
@@ -212,7 +212,7 @@
         "description": "Help text indicating the default (and best) configuration and behavior for the 'Upstream Proxy' setting. It also indicates what will happen if the setting is overridden or disabled."
     },
     "settings#split-tunnel#enable-label": {
-        "message": "Don't proxy websites within your country",
+        "message": "No proxyficar sitios web dentro de su país",
         "description": "The label on the checkbox that enables 'Split Tunnel'."
     },
     "about#visit-company-site": {
@@ -236,7 +236,7 @@
         "description": "Text on the big connection button telling the user to wait while Psiphon tries to disconnect from the network. When this message is shown, the button is disabled."
     },
     "settings#transport-mode#help-text": {
-        "message": "Uses Windows IPSec/L2TP VPN. This mode will tunnel all your apps, but it doesn't provide obfuscation. It is <strong>not recommended</strong> unless VPN-like behavior is required.",
+        "message": "Usa el cliente VPN L2TP/IPSec de Windows. Este modo llevará por túnel el tráfico de todas sus aplicaciones, pero no proporciona ofuscación. <strong>No está recomendado</strong> para superar la mayoría de los cortafuegos (firewalls).",
         "description": "Help text for the 'Use VPN Mode' transport selection checkbox. It gives some technical details and indicates that this mode is not recommended."
     },
     "settings#egress-region#select-best-performance": {
