--- a/src/webui/_locales/zh/messages.json
+++ b/src/webui/_locales/zh/messages.json
@@ -108,7 +108,7 @@
         "description": "Settings section heading. In this section the user can specify network information to use an 'upstream proxy', which is a separate proxy that Psiphon will connect through to get to its own server. This is most often used by people in school or work networks that force them to connect out to the Internet through a particular server. This setting can also disable automatic upstream proxy use."
     },
     "settings#egress-region#help-text": {
-        "message": "Psiphon has servers in many different countries. For the fastest connection speed you should choose <strong>\"Best Performance\"</strong>, but you may instead prefer to use a server in a specific country.",
+        "message": "Psiphon 在多个国家部署了服务器。为了最快的连接速度，您应该选择 <strong>“最佳性能” </strong>。您也可以在特定的国家选择一个偏爱使用的服务器。",
         "description": "Help text below the 'Psiphon Server Region' combo box. It explains to the user what the setting does and what the default (and best) option is."
     },
     "settings#vpn-incompatible-msg": {
@@ -172,7 +172,7 @@
         "description": "Checkbox text. If it is checked, diagnostic information about Psiphon's status will be sent along with the feedback to Psiphon Inc."
     },
     "settings#transport-mode#heading": {
-        "message": "Transport Mode",
+        "message": "传输模式",
         "description": "Settings section heading. In this section the user can choose to use an alternative connection and data transfer method -- also known as 'transport'."
     },
     "about#description": {
@@ -184,7 +184,7 @@
         "description": "Settings section heading. If the user clicks this, the 'Split Tunnel' section will expand and can be edited. If 'split tunnel' is enabled, if the user is trying to get to a website in his/her own country, they will connect to it directly, instead of through Psiphon."
     },
     "settings#transport-mode#check-label": {
-        "message": "Use VPN Mode",
+        "message": "使用 VPN 模式",
         "description": "Label for the checkbox that allows the user to indicate that they want to use the non-default network transport mode. This mode is generally inferior for circumvention and not recommended."
     },
     "nav#messages": {
@@ -204,7 +204,7 @@
         "description": "The text below the 'sad face' feedback choice."
     },
     "settings#egress-region#heading": {
-        "message": "Psiphon Server Region",
+        "message": "Psiphon 服务器区域",
         "description": "Settings section heading. In this section the user can choose to use a Psiphon server in a specific country/region (or the default, which is just to choose the best/fastest region). "
     },
     "settings#upstream-proxy#by-default": {
@@ -212,7 +212,7 @@
         "description": "Help text indicating the default (and best) configuration and behavior for the 'Upstream Proxy' setting. It also indicates what will happen if the setting is overridden or disabled."
     },
     "settings#split-tunnel#enable-label": {
-        "message": "Don't proxy websites within your country",
+        "message": "不代理在您的国家内的网站",
         "description": "The label on the checkbox that enables 'Split Tunnel'."
     },
     "about#visit-company-site": {
@@ -236,7 +236,7 @@
         "description": "Text on the big connection button telling the user to wait while Psiphon tries to disconnect from the network. When this message is shown, the button is disabled."
     },
     "settings#transport-mode#help-text": {
-        "message": "Uses Windows IPSec/L2TP VPN. This mode will tunnel all your apps, but it doesn't provide obfuscation. It is <strong>not recommended</strong> unless VPN-like behavior is required.",
+        "message": "使用 Windows IPSec/L2TP VPN。此模式将转接您的所有应用程序，但并不提供混淆效果。我们<strong>不推荐</strong>它用于绕过大多数防火墙。",
         "description": "Help text for the 'Use VPN Mode' transport selection checkbox. It gives some technical details and indicates that this mode is not recommended."
     },
     "settings#egress-region#select-best-performance": {
